first 10 answers sql and pyspark

--- a/Solution_pandas.ipynb
+++ b/Solution_pandas.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,24 +38,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "dataframes = [(\"Bonus\", bonus_df), (\"Title\", title_df), (\"Worker\", worker_df)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for title, df in dataframes:\n",
-    "    print(f\"{'='*10} {title} Info {'='*10}\")\n",
-    "    df.info() \n",
-    "    print(f\"\\n\")\n"
+    "#### Q-1. Fetch “FIRST_NAME” from Worker table using the alias name as WORKER_NAME."
    ]
   },
   {
